# usbundleloader

./: .gitignore  .gitmodules  .travis.yml  BundleLoader.cpp  BundleLoader.h  CMakeLists.txt  README.md  appveyor.yml  biicode.conf  conanfile.py  ignore.bii
bii/: parents.bii  requirements.bii
resources/: manifest.json
src/: BundleLoader.cpp
test/: Activator.cpp  Activator.h  CMakeLists.txt  main.cpp  usBundleLoaderTestConfig.h.in
test/bundles/: CMakeLists.txt
test/bundles/testBundleOne/: CMakeLists.txt  TestBundleOneActivator.cpp
test/bundles/testBundleOne/resources/: manifest.json
test/modules/: CMakeLists.txt
test/modules/testModuleOne/: CMakeLists.txt  TestModuleOneActivator.cpp
test/resources/: manifest.json
